fixed overlapping text in data explorer

--- a/app-ui/imports/ui/components/BiasDetectionPlots/BiasPlots.css
+++ b/app-ui/imports/ui/components/BiasDetectionPlots/BiasPlots.css
@@ -4,3 +4,9 @@
     max-height: 14vh;
     flex: 2;
 }
+
+.BarSubTitle{
+    font-size: 1.6vh;
+    color: #B70808;
+    text-align: center;
+}
