--- a/app-ui/imports/ui/components/DataExplorer/DataExplorer.css
+++ b/app-ui/imports/ui/components/DataExplorer/DataExplorer.css
@@ -71,7 +71,7 @@
     display: flex;
     flex-direction: column;
     margin: 5px;
-    border: 3px;
+    border: 2px;
     border-style: solid;
     border-color: #E5E5E5;
     justify-content: center;
@@ -80,12 +80,14 @@
 }
 
 .de-charts-sc {
-    border-bottom: 3px solid #E5E5E5;
+    border-bottom: 2px solid #E5E5E5;
     flex: 1;
     min-width: 0;
     justify-content: center;
     padding: 5px;
     align-items: stretch;
+}
+.de-charts-sc-plots {
     display: flex;
     flex-direction: row;
 }
